[package]
name = "mangadex"
version = "0.0.2"
authors = ["Edgar <git@edgarluque.com>"]
edition = "2018"
license = "MIT"
documentation = "https://docs.rs/mangadex"
readme = "README.md"
repository = "https://github.com/edg-l/mangadex-rs"
keywords = ["api", "mangadex", "wrapper", "async", "manga"]
categories = ["api-bindings", "web-programming"]
description = "Unofficial asynchronous mangadex API wrapper for rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
hmac = "0.10"
jwt = "0.13"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "1.9", features = ["json", "chrono"] }
sha2 = "0.9"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
url = "2.2"
uuid = { version = "0.8", features = ["serde"] }
isolanguage-1 = { version = "0.2", features = ["serde"] }
derive_builder = "0.10"

[dev-dependencies]
anyhow = "1.0.40"
assert_matches = "1.5.0"
ctor = "0.1"
dotenv = "0.15"
httpmock = "0.5.8"
pretty_assertions = "0.7"
serde_json = "1.0"
