[package]
name = "mangadex"
version = "0.1.2"
authors = [
    "Edgar <git@edgarluque.com>",
    "George Tsiamasiotis <git@gtsiam.anonaddy.com>",
]
edition = "2018"
license = "MIT"
documentation = "https://docs.rs/mangadex"
readme = "README.md"
repository = "https://github.com/edg-l/mangadex-rs"
keywords = ["api", "mangadex", "wrapper", "async", "manga"]
categories = ["api-bindings", "web-programming"]
description = "Unofficial asynchronous mangadex API wrapper for rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version="0.4", features=["serde"] }
reqwest = { version="0.11", features=["json", "multipart"] }
serde = { version="1.0", features=["derive"] }
serde_with = { version="1.9", features=["json", "chrono"] }
thiserror = "1.0"
url = "2.2"
uuid = { version="0.8", features=["serde"] }
derive_builder = "0.10"
serde_qs = "0.8"
serde_json = "1.0"

[dev-dependencies]
tokio = { version="1", features=["full"] }
anyhow = "1.0"
assert_matches = "1.5"
ctor = "0.1"
dotenv = "0.15"
httpmock = "0.5"
pretty_assertions = "0.7"
